[package]
name = "lukey-travvy-twitch-gif-thing"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }

[lib]
name = "lib"
