[package]
name = "lukey-travvy-twitch-gif-thing"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.173", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }

[lib]
name = "lib"
